--- a/bower.json
+++ b/bower.json
@@ -67,6 +67,68 @@
     "mat-breadcrumb":"expandjs/mat-breadcrumb",
     "mat-avatar":"expandjs/mat-avatar",
     "mat-checkbox":"expandjs/mat-checkbox",
-    "mat-menu-button":"expandjs/mat-menu-button"
+    "mat-menu-button":"expandjs/mat-menu-button",
+    "xp-slave-behavior":"expandjs/xp-slave-behavior",
+"xp-input-behavior":"expandjs/xp-input-behavior",
+"xp-master-behavior":"expandjs/xp-master-behavior",
+"xp-doc-parser":"expandjs/xp-doc-parser",
+"xp-schema":"expandjs/xp-schema",
+"xp-observer":"expandjs/xp-observer",
+"xp-request":"expandjs/xp-request",
+"xp-fs":"expandjs/xp-fs",
+"xp-emitter":"expandjs/xp-emitter",
+"xp-window":"expandjs/xp-window",
+"xp-targeter-behavior":"expandjs/xp-targeter-behavior",
+"xp-tooltip":"expandjs/xp-tooltip",
+"xp-shared-behavior":"expandjs/xp-shared-behavior",
+"xp-selected-behavior":"expandjs/xp-selected-behavior",
+"xp-script":"expandjs/xp-script",
+"xp-router":"expandjs/xp-router",
+"xp-referral-behavior":"expandjs/xp-referral-behavior",
+"xp-pubsub-behavior":"expandjs/xp-pubsub-behavior",
+"xp-pressed-behavior":"expandjs/xp-pressed-behavior",
+"xp-pages":"expandjs/xp-pages",
+"xp-overlay-behavior":"expandjs/xp-overlay-behavior",
+"xp-overlay":"expandjs/xp-overlay",
+"xp-multi-select-behavior":"expandjs/xp-multi-select-behavior",
+"xp-meta":"expandjs/xp-meta",
+"xp-media-query":"expandjs/xp-media-query",
+"xp-markdown":"expandjs/xp-markdown",
+"xp-label":"expandjs/xp-label",
+"xp-list":"expandjs/xp-list",
+"xp-iconset":"expandjs/xp-iconset",
+"xp-i18n-behavior":"expandjs/xp-i18n-behavior",
+"xp-grid":"expandjs/xp-grid",
+"xp-icon":"expandjs/xp-icon",
+"xp-form":"expandjs/xp-form",
+"xp-focused-behavior":"expandjs/xp-focused-behavior",
+"xp-finder-behavior":"expandjs/xp-finder-behavior",
+"xp-embedded-behavior":"expandjs/xp-embedded-behavior",
+"xp-elements":"expandjs/xp-elements",
+"xp-doc-viewer":"expandjs/xp-doc-viewer",
+"xp-doc-page":"expandjs/xp-doc-page",
+"xp-device":"expandjs/xp-device",
+"xp-dialog":"expandjs/xp-dialog",
+"xp-cookie":"expandjs/xp-cookie",
+"xp-collapse":"expandjs/xp-collapse",
+"xp-array-behavior":"expandjs/xp-array-behavior",
+"xp-animation":"expandjs/xp-animation",
+"xp-adapter-behavior":"expandjs/xp-adapter-behavior",
+"xp-anchor-behavior":"expandjs/xp-anchor-behavior",
+"xp-slave-state":"expandjs/xp-slave-state",
+"xp-master-state":"expandjs/xp-master-state",
+"xp-shared":"expandjs/xp-shared",
+"xp-focused-state":"expandjs/xp-focused-state",
+"xp-selected-state":"expandjs/xp-selected-state",
+"xp-embedded-state":"expandjs/xp-embedded-state",
+"xp-i18n":"expandjs/xp-i18n",
+"xp-pressed-state":"expandjs/xp-pressed-state",
+"xp-disabled-state":"expandjs/xp-disabled-state",
+"xp-notifier":"expandjs/xp-notifier",
+"xp-overlay-state":"expandjs/xp-overlay-state",
+"xp-referral":"expandjs/xp-referral",
+"xp-targeter":"expandjs/xp-targeter",
+"xp-anchor-state":"expandjs/xp-anchor-state",
+"xp-input-state":"expandjs/xp-input-state"
   }
 }
